--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "watch-server": "nodemon ./dist/server --ignore db.json",
     "test": "jest --detectOpenHandles"
   },
-  "author": "stoXmod - MetaroonLabs",
+  "author": "Amandi - MetaroonLabs",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mysql2": "^3.7.0",
+    "mysql2": "^3.9.1",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.19",
     "uuid": "^9.0.1"
